--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^11.4.33",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -31,9 +34,9 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.20.55",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
